--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
+    "jsdoc": "^3.6.6",
     "prettier": "^2.2.1"
   }
 }
