--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
   },
   "homepage": "https://github.com/nyxlang/string-utils#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
