--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/nyxlang/string-utils#readme",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/preset-env": "^7.13.15",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
