--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/nyxlang/string-utils#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/eslint-parser": "^7.13.14",
     "@babel/plugin-transform-modules-commonjs": "^7.13.8",
     "@babel/preset-env": "^7.13.15",
     "babel-jest": "^26.6.3",
@@ -32,8 +34,5 @@
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
     "prettier": "^2.2.1"
-  },
-  "dependencies": {
-    "babel-cli": "^6.26.0"
   }
 }
