--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@babel/preset-env": "^7.13.15",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
     "prettier": "^2.2.1"
