--- a/package.json
+++ b/package.json
@@ -33,8 +33,16 @@
     "eslint": "^7.24.0",
     "eslint-plugin-jsdoc": "^32.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
+  },
+  "lint-staged": {
+    "*.{js|ts}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
