--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,16 @@
 {
   "parser": "@babel/eslint-parser",
-  "extends": ["eslint:recommended", "plugin:prettier-recommended", "plugin:jsdoc-recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier-recommended",
+    "plugin:jsdoc-recommended"
+  ],
   "env": {
     "node": true,
     "browser": true,
     "jest": true
   },
-  "plugins": [
-    "jsdoc",
-    "prettier"
-  ],
+  "plugins": ["jsdoc", "prettier"],
   "rules": {
     "prettier/prettier": "error",
     "indent": [
@@ -19,16 +20,9 @@
         "SwitchCase": 1
       }
     ],
-    "brace-style": [
-      "error",
-      "1tbs"
-    ],
+    "brace-style": ["error", "1tbs"],
     "no-control-regex": "off",
     "no-misleading-character-class": "off"
   },
-  "ignorePatterns": [
-    "node_modules/",
-    "dist/",
-    "docs/"
-  ]
+  "ignorePatterns": ["node_modules/", "dist/", "docs/"]
 }
