--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.1",
   "description": "String manipulation and processing functions",
   "main": "index.js",
-  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/mjs/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "scripts": {
+    "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./.fixup.sh",
     "test": "jest",
     "test:all": "jest --all",
     "test:watch": "jest --watch",
@@ -39,6 +45,7 @@
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.4"
   }
 }
