--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "String manipulation and processing functions",
   "main": "index.js",
+  "homepage": "https://nyxlang.github.io/string-utils/",
   "exports": {
     ".": {
       "import": "./dist/mjs/index.js",
@@ -10,7 +11,7 @@
     }
   },
   "scripts": {
-    "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./.fixup.sh",
+    "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./scripts/fixup.sh",
     "test": "jest",
     "test:all": "jest --all",
     "test:watch": "jest --watch",
@@ -31,7 +32,6 @@
   "bugs": {
     "url": "https://github.com/nyxlang/string-utils/issues"
   },
-  "homepage": "https://github.com/nyxlang/string-utils#readme",
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/eslint-parser": "^7.13.14",
