Add test script for only changed files

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "jest",
     "test:all": "jest --all",
     "test:watch": "jest --watch",
+    "test:changed": "jest --onlyChanged",
     "docs": "jsdoc -c .jsdoc.json",
     "prepare": "husky install",
     "format": "prettier --write . && eslint --fix"
