--- a/.eslintrc
+++ b/.eslintrc
@@ -24,5 +24,5 @@
     "no-control-regex": "off",
     "no-misleading-character-class": "off"
   },
-  "ignorePatterns": ["node_modules/", "dist/", "docs/"]
+  "ignorePatterns": ["node_modules/", "dist/", "docs/", "src/vendor/"]
 }
