--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "bugs": {
     "url": "https://github.com/nyxlang/string-utils/issues"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/eslint-parser": "^7.13.14",
@@ -56,5 +55,8 @@
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "unicode-default-word-boundary": "^13.0.0"
   }
 }
