--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "voca": "^1.4.0"
   },
   "dependencies": {
+    "helpers": "file:.yalc/helpers",
     "unicode-default-word-boundary": "^13.0.0"
   }
 }
