--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     }
   },
   "scripts": {
-    "build": "rm -fr dist/* && npm run build:packages && npm run build:browser",
-    "build:packages": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && node ./scripts/set-package-json.js",
-    "build:browser": "parcel build src/index.js --out-file string-utils.js --no-cache",
+    "build": "rm -rf dist/ && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && node ./scripts/set-package-json.js",
     "publish-package": "npm run build && npm run docs && git add . && git commit -m 'Publish to NPM' && git push && npm publish",
     "test": "jest",
     "test:all": "jest --all",
