Add files property

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nyxlang/string-utils",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "String manipulation and processing functions",
   "main": "src/index.js",
   "type": "module",
@@ -11,6 +11,7 @@
       "require": "./dist/cjs/index.js"
     }
   },
+  "files": ["dist/"],
   "scripts": {
     "build": "rm -rf dist/ && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && node ./scripts/set-package-json.js",
     "publish-package": "npm run build && npm run docs && git add . && git commit -m 'Publish to NPM' && git push && npm publish",
@@ -54,11 +55,7 @@
     "voca": "^1.4.0"
   },
   "dependencies": {
-    "@nyxlang/helpers": "^0.0.2",
+    "@nyxlang/helpers": "^0.0.3",
     "unicode-default-word-boundary": "^13.0.0"
-  },
-  "directories": {
-    "doc": "docs",
-    "test": "tests"
   }
 }
